kubernetes/apps/servitor-apps/toolhive/config/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmcp-ingress
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/name": virtualmcpserver
  ingress:
    - fromEndpoints:
        - matchLabels:
            {
              "k8s:io.kubernetes.pod.namespace": monitoring-system,
              "app.kubernetes.io/name": vmagent,
            }
        - matchLabels:
            {
              "k8s:io.kubernetes.pod.namespace": servitor-apps,
              "app.kubernetes.io/name": hermes-agent,
            }
        - matchLabels:
            {
              "k8s:io.kubernetes.pod.namespace": servitor-apps,
              "app.kubernetes.io/name": open-webui,
            }
        - matchLabels:
            {
              "k8s:io.kubernetes.pod.namespace": networking-system,
              "app.kubernetes.io/name": agentgateway-proxy,
            }
      toPorts:
        - ports:
            - port: "4483"
              protocol: TCP
